welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:26: error: not enough arguments for method marquer: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  marquer()
         ^